--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,12 @@ spring:
     application:
         name: Alexandria
 
-logging:
-    level:
-        root: INFO
+#logging:
+#    level:
+#        root: INFO
+
+server:
+    error:
+        include-message: always
+        whitelabel:
+            enabled: false
