jpa convertion, pt 3. Thymeleaf partly implemented, book checkout and checkin logic done.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
     password: pirate
   flyway:
     enabled: true
+#  thymeleaf:
+#    cache: false
+#  cache:
+#    type: none
 server:
   error:
     include-message: always
